--- a/styles.css/celebration.css
+++ b/styles.css/celebration.css
@@ -1,9 +1,25 @@
+h2{
+    
+}
 .banner{
     text-align: center;
+    margin:20px 0px;
 }
 .banner-first{
-    width: 1120px;
-    height: 400px;
-    color: rgb(173, 155, 119);
+    width: 1320px;
+    height: 660px;
+    color: rgb(245, 244, 243);
     border: 1px solid lightskyblue;
+    background-image: url('../images/Banner\ Image.png');
+    
+}
+.banner-first > h2{
+    text-align: center;
+}
+.banner-subtitle{
+    font-size: 200px;
+    text-align: center;
+    font-style: normal;
+    line-height: 155px;
+    width:632px;
 }
