--- a/styles.css/celebration.css
+++ b/styles.css/celebration.css
@@ -16,6 +16,19 @@
 }
 .banner-first h2{
     text-align: center;
+    padding: 30px;
+}
+.banner-third{
+    width: 1320px;
+    height: 660px;
+    margin-left: 15px;
+    background-image:url('../images/Vectorrr.png');
+}
+.banner-third-title{
+    color: rgb(239, 239, 241);
+    font-size: 75px;
+    text-align:left;
+    padding-left: 25px;
 }
 .banner-subtitle{
     font-size: 60px;
