--- a/styles.css/celebration.css
+++ b/styles.css/celebration.css
@@ -40,6 +40,10 @@
     color: aliceblue;
     font-size: 20px;
 }
+.banner-just{
+    color:white;
+    text-align: left;
+}
 .banner-subtitle{
     font-size: 60px;
     text-align: center;
@@ -56,4 +60,19 @@
 }
 .discount-cata{
     color: blue;
+}
+.main-div{
+    color: black;
+    font-size: 25px;
+    text-align: center;
+    font-style: normal;
+    width: 1320px;px;
+    height: 230px;
+    padding: 40px;
+    background-color: wheat;
+}
+.main-container{
+    text-align: center;
+    border-radius: 3px;
+    margin-top: 50px;
 }
