--- a/styles.css/celebration.css
+++ b/styles.css/celebration.css
@@ -76,3 +76,16 @@
     border-radius: 3px;
     margin-top: 50px;
 }
+.offer-section{
+    width: 1320px;
+    height: 660px;
+    color: rgb(226, 211, 196);  
+}
+.offer-section-title{
+    color: red;
+    font-size: 15px;
+}
+.offer-section-top-title{
+    color: black;
+    font-size: 70px;
+}
