added images with css

--- a/styles.css/celebration.css
+++ b/styles.css/celebration.css
@@ -110,3 +110,9 @@
 .portfolio{
     margin-top: 300px;
 }
+.product-container{
+    display:flex;
+}
+.product-second-container{
+    display: flex;
+}
