--- a/styles.css/celebration.css
+++ b/styles.css/celebration.css
@@ -125,3 +125,21 @@
     border-radius: 10px;
     background: rgb(218, 195, 195);
 }
+.footer-div{
+    width: 1330px;
+    height: 600px;
+    background:black;
+    color: aliceblue;
+    
+}
+.footer-div-last{
+    text-align: right;
+    padding-right:100px;
+    padding-bottom: 200px;
+}
+.social-link{
+text-align: center;
+padding-bottom: 100px;
+
+;
+}
